--- a/.qmake.conf
+++ b/.qmake.conf
@@ -1,9 +1,10 @@
 load(qt_build_config)
 
-CONFIG          += warning_clean
+CONFIG += warning_clean
+## DEFINES += QT_NO_FOREACH
 
-MODULE_VERSION   = 5.6.0
+MODULE_VERSION = 6.0.3
 
 # change version into current Qt version every time your upgrade your Qt
 
-CIOS_VERSION     = 1.6.0
+AITK_VERSION = 2.0.0
